--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,12 @@
     <artifactId>itext-sample</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
-        <itext.version>7.1.13</itext.version>
-        <junit.version>4.12</junit.version>
+        <itext.version>7.1.16</itext.version>
+        <pdfbox.version>2.0.24</pdfbox.version>
+        <junit.version>4.13.2</junit.version>
+        <apache.commons.lang3.version>3.12.0</apache.commons.lang3.version>
+        <apache.commons.io.version>2.11.0</apache.commons.io.version>
+        <twelvemonkeys.version>3.7.0</twelvemonkeys.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -17,14 +21,24 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>com.twelvemonkeys.imageio</groupId>
+            <artifactId>imageio-jpeg</artifactId>
+            <version>${twelvemonkeys.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.twelvemonkeys.imageio</groupId>
+            <artifactId>imageio-tiff</artifactId>
+            <version>${twelvemonkeys.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.11</version>
+            <version>${apache.commons.lang3.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.8.0</version>
+            <version>${apache.commons.io.version}</version>
         </dependency>
         <dependency>
             <groupId>com.itextpdf</groupId>
@@ -36,6 +50,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>${pdfbox.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
